examples/test/testpolicy3872.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3872
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key30: value39
      key37: value13
      key13: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value31
          key12: value41
          key22: value26
